# Risk

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  diesel.toml  install.sh  optic.yml  profile.sh  rustfmt.toml  rustrisk.service  sample.env
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.optic/: ignore
beta/college-football-risk/: Routes.txt  gatsby-config.js  package-lock.json  package.json
beta/college-football-risk/src/pages/: index.tsx
db/: cfbr3_schema.sql  do_upgrade.sql  michigan.sql  new.sql  rollback.sql  run.sql  up.sql  up.sql.2  views.sql
db/migrate-cfbr-0.3.0/: events.sql  final.sql  sql.sql  sql2.sql
documentation/: API.md  DEVIATIONS.md  getting_started.md
lite/: README.md  index.hbs  region.hb  template.html
migrations/2023-06-18-200337_new_build/: down.sql  up.sql
migrations/2023-07-16-074148_mods/: down.sql  up.sql
ringmaster/: Cargo.toml
ringmaster/src/: main.rs  schema.rs  structs.rs
rr_proc_macros/: Cargo.toml
rr_proc_macros/src/: lib.rs
server/: Cargo.toml  diesel.toml  functions.sql  run.sh
server/.optic/api/: specification.json
server/src/: catchers.rs  hardcode.rs  main.rs  schema.rs
server/src/model/: mod.rs
server/src/model/auth/: model.rs  route.rs
server/src/model/captchasvc/: model.rs  route.rs
server/src/model/discord/: mod.rs  model.rs  route.rs
server/src/model/player/: model.rs  route.rs
server/src/model/ratings/: mod.rs  model.rs
server/src/model/reddit/: model.rs  route.rs
server/src/model/stats/: mod.rs  model.rs  route.rs
server/src/model/sys/: model.rs
server/src/model/team/: model.rs  route.rs
server/src/model/territory/: model.rs
server/src/model/turn/: model.rs  route.rs
server/src/model/user/: mod.rs  model.rs
server/static/: README.md  assoc.t.json  index.html  index.html.counties  index.old.html  main.js
server/static/assets/css/: styles.css
server/static/assets/scripts/: Router.js  charts.js  datatables.js  main.js
server/static/css/: main.css
server/static/images/: cursor2.cur
server/static/old_map_stuff/: index.old.html  texas-counties.json
server/static/old_map_stuff/scripts/: main.js
server/static/old_map_stuff/src/: Makefile  adjacency.csv  assoc.json
server/static/scripts/: main.js
src/: catchers.rs  db.rs  error.rs  hardcode.rs  lib.rs  limits.rs  ringmaster.rs  schema.rs  server.rs  structs.rs  test.rs
src/model/: mod.rs  player.rs
src/model/auth/: mod.rs  model.rs  route.rs  usermerge.rs
src/model/auth/auth_providers/: discord.rs  loginas.rs  mod.rs  reddit.rs
src/model/auth_old/: mod.rs  model.rs  route.rs
src/model/captchasvc/: mod.rs  model.rs  route.rs
src/model/discord/: mod.rs  model.rs  route.rs
src/model/event/: model.rs  route.rs
src/model/player/: mod.rs  model.rs  route.rs
src/model/ratings/: model.rs
src/model/reddit/: mod.rs  model.rs  route.rs
src/model/region/: model.rs  route.rs
src/model/role/: model.rs
src/model/stats/: model.rs  route.rs
src/model/sys/: mod.rs  model.rs  route.rs
src/model/team/: mod.rs  model.rs  route.rs
src/model/territory/: model.rs  route.rs
src/model/turn/: mod.rs  model.rs  route.rs
src/model/user/: mod.rs  model.rs  route.rs
src/model/user_old/: mod.rs  model.rs
src/optional/: image.rs  mod.rs
static/: .block  index.html
static/assets/css/: styles.css
static/assets/scripts/: charts.js  hammer.js  main.js  svg.js
static/images/: cur117.cur
static/images/strava/btn_strava_connectwith_light/: btn_strava_connectwith_light.eps
static/images/strava/btn_strava_connectwith_orange/: btn_strava_connectwith_orange.eps
test/: README.md
