[package]
name = "rust-risk"
version = "0.3.0"
authors = ["Mautamu <mautamu@protonmail.com>"]
edition = "2021"

[dependencies]
base64 = {version = "0.20.0", optional=true}
captcha = {version = "0.0.9", optional=true}
chrono = {version = "0.4.19", features = ["serde"]}
git-version = "0.3.4"
time = "0.3"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuid", "chrono", "numeric", "serde_json"] }
diesel-citext = {git = "https://github.com/mautamu/diesel-citext", rev="0322fda06445136cc54fc3185f132ad7a21ae097"}
hyper = { version = "0.14.16", features = ["full"] }
image = {version = "0.24.1", optional=true}
nsvg = {version = "0.5.1", optional=true}
jsonwebtoken = "8.0.1"
rand = {version = "0.8", features = ["std"]}
rand_chacha="0.3"
reqwest = { version = "0.11.8", default-features = false, features = ["json", "rustls-tls"] }
rocket = {version = "0.5.0-rc.1", features = ["secrets", "json"] }
rocket_sync_db_pools = {version = "0.1.0-rc.1", features=["diesel_postgres_pool"]}
rocket_oauth2 = {git = "https://github.com/mautamu/rocket_oauth2", branch="next", features = ["hyper_rustls_adapter"]}
okapi = {package="okapi", git = "https://github.com/GREsau/okapi", rev = "b5b0a89b273f04342d1cb615fef0642beef33cef" }
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "b5b0a89b273f04342d1cb615fef0642beef33cef",features = ["swagger"] }
schemars = { version = "0.8", features = ["preserve_order"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
toml="0.5.8"
urlencoding = "2.1.0"
rocket-recaptcha-v3 = "0.3.2"

[features]
chaos = []
default = ["risk_reddit"]
risk_discord = []
risk_groupme = []
risk_image = ["image", "nsvg"]
risk_reddit = []
risk_captcha = ["captcha", "base64"]

[[bin]]
name = "rrserver"
path = "src/server.rs"

[[bin]]
name = "rrringmaster"
path = "src/ringmaster.rs"
