[package]
name = "rust-risk"
version = "0.3.0"
authors = ["Mautamu <mautamu@protonmail.com>"]
edition = "2021"

[dependencies]
base64 = {version = "0.20.0", optional=true}
captcha = {version = "0.0.9", optional=true}
chrono = {version = "0.4.19", features = ["serde"]}
git-version = "0.3.4"
time = { version = "0.3", features = ["serde","macros", "parsing"] }
diesel = { version = "2.1.0", features = ["postgres", "postgres_backend", "r2d2", "uuid", "chrono", "numeric", "serde_json", "network-address"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
hyper = { version = "0.14.16", features = ["full"] }
image = {version = "0.24.1", optional=true}
nsvg = {version = "0.5.1", optional=true}
jsonwebtoken = "8.0.1"
rand = {version = "0.8", features = ["std"]}
rand_chacha="0.3"
reqwest = { version = "0.11.8", default-features = false, features = ["json", "rustls-tls"] }
rocket = {version = "0.5.0-rc.3", features = ["uuid", "secrets", "json"] }
rocket_sync_db_pools = {version = "0.1.0-rc.3", features=["diesel_postgres_pool"]}
rocket_oauth2 = {git = "https://github.com/mautamu/rocket_oauth2", branch="next", features = ["hyper_rustls_adapter"]}
okapi = {version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger"] }
schemars = { version = "0.8", features = ["chrono","uuid1","preserve_order"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
toml="0.5.8"
uuid ={version = "1.3.4", features = ["serde"]}
urlencoding = "2.1.0"
rocket-recaptcha-v3 = "0.3.2"
rr_proc_macros = {path = "rr_proc_macros/"}
ipnetwork = "0.20.0"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]

[features]
chaos = []
default = ["reddit"]
discord = []
risk_image = ["image", "nsvg"]
reddit = []
risk_captcha = ["captcha", "base64"]

[[bin]]
name = "rrserver"
path = "src/server.rs"

#[[bin]]
#name = "rrringmaster"
#path = "src/ringmaster.rs"
