[package]
name = "ringmaster"
version = "0.1.0-alpha1"
authors = ["Mautamu <mautamu@>"]
edition = "2018"

[dependencies]
chrono = {version = "0.4.13", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
postgres = "0.17.2"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
