[package]
name = "ringmaster"
version = "0.1.4-rc1"
authors = ["Mautamu <mautamu@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
postgres = "0.18.1"
rand = "0.7.3"
rand_chacha="0.2.2"
serde = "1.0.117"
serde_derive = "1.0.117"
image = "0.23.12"
nsvg = "0.5.1" 
