[package]
name = "rust-risk"
version = "0.1.1"
authors = ["Mautamu <mautamu@protonmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.12.3"
captcha = "0.0.7"
chrono = "0.4.12"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono", "numeric", "serde_json"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
hyper = "0.10"
hyper-sync-rustls = "=0.3.0-rc.17"
jsonwebtoken = "7.2.0"
rand = "0.7.3"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
rocket = {version = "0.4.5", features = ["private-cookies"] }
rocket_contrib = "0.4.4"
rocket_oauth2 = {path = "../../rocket_oauth2", features = ["hyper_sync_rustls_adapter"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
urlencoding = "1.0.0"

[features]

risk_security = []
