[package]
name = "rust-risk"
version = "0.1.14"
authors = ["Mautamu <mautamu@protonmail.com>"]
edition = "2018"

[dependencies]
base64 = {version = "0.13.0", optional=true}
captcha = {version = "0.0.8", optional=true}
chrono = {version = "0.4.19", features = ["serde"]}
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono", "numeric", "serde_json"] }
diesel-citext = {git = "https://github.com/afonso360/diesel-citext"}
diesel_migrations = "1.4"
dotenv = "0.15.0"
hyper = "0.10"
hyper-sync-rustls = "=0.3.0-rc.17"
jsonwebtoken = "7.2.0"
rand = "0.7.3"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = {version = "0.4.6", features = ["private-cookies"] }
rocket_contrib = "0.4.6"
rocket_oauth2 = {version = "0.4.1", features = ["hyper_sync_rustls_adapter"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
urlencoding = "1.1.1"

[features]
default = ["risk_reddit"]
risk_discord = []
risk_groupme = []
risk_reddit = []
risk_security = []
risk_captcha = ["captcha", "base64"]